test(floatinglabel): add test for textbox with floating label and placeholder

--- a/tests/visual/src/misc/floating-label.html
+++ b/tests/visual/src/misc/floating-label.html
@@ -38,6 +38,26 @@
             </span>
         </div>
         <div>
+            <span is="FloatingLabel" label="Textbox with placeholder and floating label" empty>
+                <input is="Textbox" placeholder="Placeholder" />
+            </span>
+        </div>
+        <div dir="rtl">
+            <span is="FloatingLabel" label="Textbox with placeholder and floating label" empty>
+                <input is="Textbox"placeholder="Placeholder" />
+            </span>
+        </div>
+        <div>
+            <span is="FloatingLabel" label="Focused Textbox with placeholder" empty focus>
+                <input is="Textbox" placeholder="Placeholder" focus />
+            </span>
+        </div>
+        <div dir="rtl">
+            <span is="FloatingLabel" label="Focused Textbox with placeholder" empty focus>
+                <input is="Textbox"placeholder="Placeholder" focus />
+            </span>
+        </div>
+        <div>
             <span is="FloatingLabel" label="Combobox label" empty>
                 <input is="Combobox" />
             </span>
