test(fab): update fab test to support align property for consistency

--- a/tests/visual/src/misc/fab-items.html
+++ b/tests/visual/src/misc/fab-items.html
@@ -31,7 +31,7 @@
 
         <span>Downward - Left Labels</span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="small" position="top-end" style="top: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" size="small" align="top-end" style="top: 16px; right: 16px;"></button>
             <!-- top/bottom calculations are based on spacing from the top/bottom + the FAB height -->
             <!-- right/left calculations are based on spacing from the left/right + half of the FAB's width - half of the item's with -->
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; top: calc(16px + 36px); right: calc(16px + calc(36px / 2) - calc(36px /2));">
@@ -60,7 +60,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="medium" position="top-end" style="top: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" size="medium" align="top-end" style="top: 16px; right: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; top: calc(16px + 52px); right: calc(16px + calc(52px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-md k-fab-items-bottom">
                     <li class="k-fab-item k-text-right k-hover">
@@ -83,7 +83,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="large" position="top-end" style="top: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" size="large" align="top-end" style="top: 16px; right: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; top: calc(16px + 68px); right: calc(16px + calc(68px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-lg k-fab-items-bottom">
                     <li class="k-fab-item k-text-right k-hover">
@@ -108,7 +108,7 @@
 
         <span>Downward - Right Labels</span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="small" position="top-start" style="top: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" size="small" align="top-start" style="top: 16px; left: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; top: calc(16px + 36px); left: calc(16px + calc(36px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-bottom">
                     <li class="k-fab-item k-text-left k-hover">
@@ -127,7 +127,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="medium" position="top-start" style="top: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" size="medium" align="top-start" style="top: 16px; left: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; top: calc(16px + 52px); left: calc(16px + calc(52px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-bottom">
                     <li class="k-fab-item k-text-left k-hover">
@@ -146,7 +146,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="large" position="top-start" style="top: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" size="large" align="top-start" style="top: 16px; left: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; top: calc(16px + 68px); left: calc(16px + calc(68px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-bottom">
                     <li class="k-fab-item k-text-left k-hover">
@@ -167,7 +167,7 @@
 
         <span>Upward - Left Labels</span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="small" position="bottom-end" style="bottom: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" size="small" align="bottom-end" style="bottom: 16px; right: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; bottom: calc(16px + 36px); right: calc(16px + calc(36px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-top">
                     <li class="k-fab-item k-text-right k-hover">
@@ -186,7 +186,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="medium" position="bottom-end" style="bottom: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" size="medium" align="bottom-end" style="bottom: 16px; right: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; bottom: calc(16px + 52px); right: calc(16px + calc(52px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-top">
                     <li class="k-fab-item k-text-right k-hover">
@@ -205,7 +205,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="large" position="bottom-end" style="bottom: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" size="large" align="bottom-end" style="bottom: 16px; right: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; bottom: calc(16px + 68px); right: calc(16px + calc(68px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-top">
                     <li class="k-fab-item k-text-right k-hover">
@@ -226,7 +226,7 @@
 
         <span>Upward - Right Labels</span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="small" position="bottom-start" style="bottom: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" size="small" align="bottom-start" style="bottom: 16px; left: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; bottom: calc(16px + 36px); left: calc(16px + calc(36px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-top">
                     <li class="k-fab-item k-text-left k-hover">
@@ -245,7 +245,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="medium" position="bottom-start" style="bottom: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" size="medium" align="bottom-start" style="bottom: 16px; left: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; bottom: calc(16px + 52px); left: calc(16px + calc(52px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-top">
                     <li class="k-fab-item k-text-left k-hover">
@@ -264,7 +264,7 @@
             </div>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" size="large" position="bottom-start" style="bottom: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" size="large" align="bottom-start" style="bottom: 16px; left: 16px;"></button>
             <div class="k-fab-popup k-popup k-popup-transparent" style="position: absolute; bottom: calc(16px + 68px); left: calc(16px + calc(68px / 2) - calc(36px /2));">
                 <ul class="k-fab-items k-fab-items-top">
                     <li class="k-fab-item k-text-left k-hover">
