--- a/tests/visual/src/misc/fab-position.html
+++ b/tests/visual/src/misc/fab-position.html
@@ -31,35 +31,35 @@
 
         <span>Top</span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="top-start" style="top: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" align="top-start" style="top: 16px; left: 16px;"></button>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="top-center" style="top: 16px;"></button>
+            <button is="Fab" icon="plus" align="top-center" style="top: 16px;"></button>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="top-end" style="top: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" align="top-end" style="top: 16px; right: 16px;"></button>
         </span>
 
         <span>Middle</span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="middle-start" style="left: 16px;"></button>
+            <button is="Fab" icon="plus" align="middle-start" style="left: 16px;"></button>
         </span>
         <span class="relative-container">
             NO CENTER POSITION
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="middle-end" style="right: 16px;"></button>
+            <button is="Fab" icon="plus" align="middle-end" style="right: 16px;"></button>
         </span>
 
         <span>Bottom</span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="bottom-start" style="bottom: 16px; left: 16px;"></button>
+            <button is="Fab" icon="plus" align="bottom-start" style="bottom: 16px; left: 16px;"></button>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="bottom-center" style="bottom: 16px;"></button>
+            <button is="Fab" icon="plus" align="bottom-center" style="bottom: 16px;"></button>
         </span>
         <span class="relative-container">
-            <button is="Fab" icon="plus" position="bottom-end" style="bottom: 16px; right: 16px;"></button>
+            <button is="Fab" icon="plus" align="bottom-end" style="bottom: 16px; right: 16px;"></button>
         </span>
 
     </div>
