test(daterangepicker): add swap button in tests

--- a/tests/visual/src/misc/daterangepicker.html
+++ b/tests/visual/src/misc/daterangepicker.html
@@ -29,6 +29,18 @@
             <span is="DateRangePicker"></span>
         </div>
 
+        <span>DateRangePicker with Swap Button</span>
+        <span>DateRangePicker with Swap Button RTL</span>
+
+        <!-- normal with swap button-->
+        <div>
+            <span is="DateRangePicker" swapButton></span>
+        </div>
+        <div dir="rtl">
+            <span is="DateRangePicker" swapButton></span>
+        </div>
+
+
         <!-- disabled -->
         <span>DateRangePicker Disabled</span>
         <span>DateRangePicker Disabled RTL</span>
