chore: update font icons to latest

--- a/tests/visual/src/misc/icons.html
+++ b/tests/visual/src/misc/icons.html
@@ -561,6 +561,7 @@
             "file-image",
             "file-presentation",
             "file-data",
+            "report-element",
             "file-disc-image",
             "file-programming",
             "parameters-byte-array",
