test(menu): add focused and active menu item

--- a/tests/visual/src/misc/menu-popup-size.html
+++ b/tests/visual/src/misc/menu-popup-size.html
@@ -37,6 +37,7 @@
                         <div is="MenuItem" text="Hover" hover></div>
                         <div is="MenuItem" text="Focus" focus></div>
                         <div is="MenuItem" text="Active" active></div>
+                        <div is="MenuItem" text="Focus & Active" active focus></div>
                         <div is="MenuItem" text="Disabled" disabled></div>
                     </menu>
                 </div>
@@ -51,6 +52,7 @@
                         <div is="MenuItem" text="Hover" hover></div>
                         <div is="MenuItem" text="Focus" focus></div>
                         <div is="MenuItem" text="Active" active></div>
+                        <div is="MenuItem" text="Focus & Active" active focus></div>
                         <div is="MenuItem" text="Disabled" disabled></div>
                     </menu>
                 </div>
@@ -65,6 +67,7 @@
                         <div is="MenuItem" text="Hover" hover></div>
                         <div is="MenuItem" text="Focus" focus></div>
                         <div is="MenuItem" text="Active" active></div>
+                        <div is="MenuItem" text="Focus & Active" active focus></div>
                         <div is="MenuItem" text="Disabled" disabled></div>
                     </menu>
                 </div>
