--- a/tests/visual/src/misc/menu.html
+++ b/tests/visual/src/misc/menu.html
@@ -62,6 +62,7 @@
                                 <div is="MenuItem" text="Hover" hover showArrow></div>
                                 <div is="MenuItem" text="Active" active showArrow></div>
                                 <div is="MenuItem" text="Focus" focus></div>
+                                <div is="MenuItem" text="Focus & Active" active focus></div>
                             </div>
                         </div>
                     </div>
