test: add test for numeric filter in grid

--- a/tests/visual/src/misc/grid-filter-menu.html
+++ b/tests/visual/src/misc/grid-filter-menu.html
@@ -81,6 +81,65 @@
             </kendo-popup>
         </section>
 
+        <!-- Angular rendering - Numeric Grid Filter Menu  -->
+        <section>
+            <kendo-popup class="k-animation-container k-animation-container-shown">
+            <div class="k-popup k-grid-columnmenu-popup">
+                <kendo-grid-columnmenu-container class="ng-star-inserted">
+                    <kendo-grid-columnmenu-sort class="k-columnmenu-item-wrapper ng-star-inserted">
+                        <kendo-grid-columnmenu-item>
+                            <div class="k-columnmenu-item">
+                                <span class="k-icon k-i-sort-asc-sm"></span> Sort Ascending
+                            </div>
+                        </kendo-grid-columnmenu-item>
+                        <kendo-grid-columnmenu-item>
+                            <div role="button" class="k-columnmenu-item">
+                                <span class="k-icon k-i-sort-desc-sm"></span> Sort Descending
+                            </div>
+                        </kendo-grid-columnmenu-item>
+                    </kendo-grid-columnmenu-sort>
+
+                    <kendo-grid-columnmenu-chooser class="k-columnmenu-item-wrapper">
+                        <kendo-grid-columnmenu-item>
+                            <div class="k-columnmenu-item">
+                                <span class="k-icon k-i-columns"></span> Columns
+                            </div>
+                        </kendo-grid-columnmenu-item>
+                    </kendo-grid-columnmenu-chooser>
+
+                    <kendo-grid-columnmenu-filter class="k-columnmenu-item-wrapper">
+                        <kendo-grid-columnmenu-item>
+                            <div  class="k-columnmenu-item">
+                                <span class="k-icon k-i-filter"></span> Filter
+                            </div>
+                            <div class="k-columnmenu-item-content">
+                                <kendo-grid-filter-menu-container>
+                                    <form class="k-filter-menu k-group k-reset k-state-border-up ng-untouched ng-pristine ng-valid">
+                                        <div class="k-filter-menu-container">
+                                            <kendo-grid-numeric-filter-menu>
+                                                <kendo-grid-numeric-filter-menu-input>
+                                                    <kendo-grid-filter-menu-input-wrapper>
+                                                        <input is="DropdownList" value="Is equal to" />
+                                                        <input is="NumericTextbox" />
+                                                    </kendo-grid-filter-menu-input-wrapper>
+                                                </kendo-grid-numeric-filter-menu-input>
+                                                <input is="DropdownList" class="k-filter-and" Value="And" />
+                                                </kendo-grid-numeric-filter-menu>
+                                                <div class="k-columnmenu-actions">
+                                                    <button is="Button">Clear</button>
+                                                    <button is="Button" ThemeColor="primary">Filter</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </kendo-grid-filter-menu-container>
+                                </div>
+                            </kendo-grid-columnmenu-item>
+                        </kendo-grid-columnmenu-filter>
+                    </kendo-grid-columnmenu-container>
+                </div>
+            </kendo-popup>
+        </section>
+
         <!-- Angular rendering - Grid Filter Menu template with Switch component -->
         <section>
             <kendo-popup class="k-animation-container">
