chore: house cleaning on tests

--- a/tests/orgchart/orgchart-node.html
+++ b/tests/orgchart/orgchart-node.html
@@ -17,7 +17,7 @@
     <div id="test-area" class="k-d-grid k-grid-cols-1">
         <span>Horizontal</span>
         <section>
-            <div orientaion="horizontal" class="k-orgchart">
+            <div class="k-orgchart">
                 <div class="k-orgchart-container" style="width: 100%; height: 260px;">
                     <div class="k-orgchart-group k-pos-absolute k-hstack k-justify-content-center" style="width: 100%;">
                         <div class="k-orgchart-node-container k-justify-content-around k-hstack">
@@ -100,7 +100,7 @@
         </section>
         <span>Vertical</span>
         <section>
-            <div orientaion="horizontal" class="k-orgchart">
+            <div class="k-orgchart">
                 <div class="k-orgchart-container" style="width: 100%; height: 366px;">
                     <div class="k-orgchart-group k-pos-absolute k-vstack k-justify-content-center" style="width: 100%;">
                         <div class="k-orgchart-node-container k-justify-content-around k-vstack">
