--- a/tests/spreadsheet/spreadsheet.html
+++ b/tests/spreadsheet/spreadsheet.html
@@ -196,7 +196,7 @@
                 </div>
                 <div class="k-spreadsheet-formula-bar">
                     <span class="k-icon k-i-formula-fx"></span>
-                    <div class="k-spreadsheet-formula-input k-spreadsheet-array-formula" style="white-space: pre;">
+                    <div class="k-spreadsheet-formula-input k-spreadsheet-array-formula">
                         <span class="k-syntax-startexp k-syntax-at-point">=</span>
                         <span class="k-syntax-func">Product</span>
                         <span class="k-syntax-punc">(</span>
