--- a/tests/orgchart/orgchart-group-states.html
+++ b/tests/orgchart/orgchart-group-states.html
@@ -18,10 +18,10 @@
         <span>Default</span>
         <span>Focus</span>
         <section>
-            <div orientaion="horizontal" class="k-orgchart">
+            <div class="k-orgchart">
                 <div class="k-orgchart-container" style="width: 100%; height: 431px;">
-                    <div class="k-orgchart-group k-pos-absolute k-justify-content-around" style="width: 100%;">
-                        <div orientaion="horizontal" class="k-orgchart-node-group k-vstack k-align-items-center">
+                    <div class="k-orgchart-group k-pos-absolute k-hstack k-justify-content-around" style="width: 100%;">
+                        <div class="k-orgchart-node-group k-vstack k-align-items-center">
                             <div class="k-orgchart-node-group-container k-vstack">
                                 <div class="k-orgchart-node-group-title">Group Title</div>
                                 <div class="k-orgchart-node-group-subtitle">Group SubTitle</div>
@@ -94,10 +94,10 @@
             </div>
         </section>
         <section>
-            <div orientaion="horizontal" class="k-orgchart">
+            <div class="k-orgchart">
                 <div class="k-orgchart-container" style="width: 100%; height: 431px;">
-                    <div class="k-orgchart-group k-pos-absolute k-justify-content-around" style="width: 100%;">
-                        <div orientaion="horizontal" class="k-orgchart-node-group k-vstack k-align-items-center">
+                    <div class="k-orgchart-group k-pos-absolute k-hstack k-justify-content-around" style="width: 100%;">
+                        <div class="k-orgchart-node-group k-vstack k-align-items-center">
                             <div class="k-orgchart-node-group-container k-vstack k-focus">
                                 <div class="k-orgchart-node-group-title">Group Title</div>
                                 <div class="k-orgchart-node-group-subtitle">Group SubTitle</div>
