--- a/tests/orgchart/orgchart-group.html
+++ b/tests/orgchart/orgchart-group.html
@@ -17,10 +17,10 @@
     <div id="test-area" class="k-d-grid k-grid-cols-1">
         <span>Horizontal</span>
         <section>
-            <div orientaion="horizontal" class="k-orgchart">
+            <div class="k-orgchart">
                 <div class="k-orgchart-container" style="width: 100%; height: 285px;">
                     <div class="k-orgchart-group k-pos-absolute k-hstack k-justify-content-around" style="width: 100%;">
-                        <div orientaion="horizontal" class="k-orgchart-node-group k-vstack k-align-items-center">
+                        <div class="k-orgchart-node-group k-vstack k-align-items-center">
                             <div class="k-orgchart-node-group-container k-vstack">
                                 <div class="k-orgchart-node-group-title">Group Title</div>
                                 <div class="k-orgchart-node-group-subtitle">Group SubTitle</div>
@@ -72,7 +72,7 @@
                                 <span class="k-button-icon k-icon k-i-plus"></span>
                             </button>
                         </div>
-                        <div orientaion="horizontal" class="k-orgchart-node-group k-vstack k-align-items-center">
+                        <div class="k-orgchart-node-group k-vstack k-align-items-center">
                             <div class="k-orgchart-node-group-container k-vstack">
                                 <div class="k-orgchart-node-group-title">Group Title</div>
                                 <div class="k-orgchart-node-group-subtitle">Group SubTitle</div>
@@ -110,10 +110,10 @@
         </section>
         <span>Vertical</span>
         <section>
-            <div orientaion="horizontal" class="k-orgchart">
+            <div class="k-orgchart">
                 <div class="k-orgchart-container" style="width: 100%; height: 435px;">
                     <div class="k-orgchart-group k-pos-absolute k-hstack k-justify-content-around" style="width: 100%;">
-                        <div orientaion="horizontal" class="k-orgchart-node-group k-vstack k-align-items-center">
+                        <div class="k-orgchart-node-group k-vstack k-align-items-center">
                             <div class="k-orgchart-node-group-container k-vstack">
                                 <div class="k-orgchart-node-group-title">Group Title</div>
                                 <div class="k-orgchart-node-group-subtitle">Group SubTitle</div>
@@ -181,7 +181,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div orientaion="horizontal" class="k-orgchart-node-group k-vstack k-align-items-center">
+                        <div class="k-orgchart-node-group k-vstack k-align-items-center">
                             <div class="k-orgchart-node-group-container k-vstack">
                                 <div class="k-orgchart-node-group-title">Group Title</div>
                                 <div class="k-orgchart-node-group-subtitle">Group SubTitle</div>
