--- a/packages/html/src/grid/tests/grid-header-new-rendering.html
+++ b/packages/html/src/grid/tests/grid-header-new-rendering.html
@@ -34,7 +34,7 @@
                                             <span  class="k-sort-status"  style="position: absolute; left: -10000px;">Sorted Ascending</span>
                                         </span>
                                     </th>
-                                    <th class="k-header k-grid-draggable-header" rowspan="1" colspan="1">
+                                    <th class="k-header k-grid-draggable-header k-justify-content-end" rowspan="1" colspan="1">
                                         <span  class="k-cell-inner">
                                             <span  class="k-link">
                                                 <span  class="k-column-title">
@@ -92,10 +92,10 @@
                                             </kendo-grid-filter-menu>
                                         </span>
                                     </th>
-                                    <th class="k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
+                                    <th class="k-header k-filterable k-grid-draggable-header k-justify-content-end" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
-                                                <span class="k-column-title">Discontinued Discontinued Discontinued</span>
+                                                <span class="k-column-title">Discontinued</span>
                                                 <span class="k-icon k-i-sort-asc-sm"></span>
                                                 <span class="k-sort-order">2</span>
                                             </span>
