test: add tests for adaptive dropdownlist, datepicker and timepicker

--- a/tests/calendar/calendar-classic-jquery.html
+++ b/tests/calendar/calendar-classic-jquery.html
@@ -181,7 +181,7 @@
                     </table>
                 </div>
                 <div class="k-footer">
-                    <a class="k-link k-nav-today">Thursday, March 29, 2018</a>
+                    <a class="k-nav-today">Thursday, March 29, 2018</a>
                 </div>
             </div>
         </section>
@@ -361,7 +361,7 @@
                     </table>
                 </div>
                 <div class="k-footer">
-                    <a class="k-link k-nav-today k-disabled">Thursday, March 29, 2018</a>
+                    <a class="k-nav-today k-disabled">Thursday, March 29, 2018</a>
                 </div>
             </div>
         </section>
@@ -431,7 +431,7 @@
                     </table>
                 </div>
                 <div class="k-footer">
-                    <a class="k-link k-nav-today">Thursday, March 29, 2018</a>
+                    <a class="k-nav-today">Thursday, March 29, 2018</a>
                 </div>
             </div>
         </section>
@@ -493,7 +493,7 @@
                     </table>
                 </div>
                 <div class="k-footer">
-                    <a class="k-link k-nav-today">Thursday, March 29, 2018</a>
+                    <a class="k-nav-today">Thursday, March 29, 2018</a>
                 </div>
             </div>
         </section>
@@ -557,7 +557,7 @@
                     </table>
                 </div>
                 <div class="k-footer">
-                    <a class="k-link k-nav-today">Thursday, March 29, 2018</a>
+                    <a class="k-nav-today">Thursday, March 29, 2018</a>
                 </div>
             </div>
         </section>
