--- a/tests/multiviewcalendar/multiviewcalendar-jquery.html
+++ b/tests/multiviewcalendar/multiviewcalendar-jquery.html
@@ -293,7 +293,7 @@
                     </table>
                 </div>
                 <div class="k-calendar-footer">
-                    <a href="#" class="k-link k-nav-today">Monday, October 29, 2021</a>
+                    <a class="k-nav-today">Monday, October 29, 2021</a>
                 </div>
             </div>
         </section>
@@ -411,7 +411,7 @@
                     </table>
                 </div>
                 <div class="k-calendar-footer">
-                    <a href="#" class="k-link k-nav-today">Monday, October 29, 2021</a>
+                    <a class="k-nav-today">Monday, October 29, 2021</a>
                 </div>
             </div>
         </section>
@@ -529,7 +529,7 @@
                     </table>
                 </div>
                 <div class="k-calendar-footer">
-                    <a href="#" class="k-link k-nav-today">Monday, October 29, 2021</a>
+                    <a class="k-nav-today">Monday, October 29, 2021</a>
                 </div>
             </div>
         </section>
