--- a/packages/html/src/grid/tests/grid-header-new-rendering.html
+++ b/packages/html/src/grid/tests/grid-header-new-rendering.html
@@ -151,7 +151,7 @@
                                             </span>
                                             <span class="k-sort-status"  style="position: absolute; left: -10000px;">Sorted Ascending</span>
                                             <kendo-grid-column-menu>
-                                                <a class="k-grid-column-menu k-grid-filter">
+                                                <a class="k-grid-header-menu k-grid-filter-menu">
                                                     <span class="k-icon k-i-more-vertical"></span>
                                                 </a>
                                             </kendo-grid-column-menu>
@@ -168,7 +168,7 @@
                                             </span>
                                             <span class="k-sort-status"  style="position: absolute; left: -10000px;">Sorted Ascending</span>
                                             <kendo-grid-column-menu>
-                                                <a class="k-grid-column-menu k-grid-filter">
+                                                <a class="k-grid-header-menu k-grid-filter-menu">
                                                     <span class="k-icon k-i-more-vertical"></span>
                                                 </a>
                                             </kendo-grid-column-menu>
@@ -184,7 +184,7 @@
                                             </span>
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
                                             <kendo-grid-column-menu>
-                                                <a class="k-grid-column-menu k-grid-filter">
+                                                <a class="k-grid-header-menu k-grid-filter-menu">
                                                     <span class="k-icon k-i-more-vertical"></span>
                                                 </a>
                                             </kendo-grid-column-menu>
