fix(grid): add support for sort-asc-small and sort-desc-small icons

--- a/packages/html/src/grid/tests/grid-filter-menu-popup-angular.html
+++ b/packages/html/src/grid/tests/grid-filter-menu-popup-angular.html
@@ -58,12 +58,12 @@
                     <kendo-grid-columnmenu-sort class="k-columnmenu-item-wrapper ng-star-inserted">
                         <kendo-grid-columnmenu-item>
                             <div class="k-columnmenu-item">
-                                <span class="k-icon k-i-sort-asc-sm"></span> Sort Ascending
+                                <span class="k-icon k-i-sort-asc-small"></span> Sort Ascending
                             </div>
                         </kendo-grid-columnmenu-item>
                         <kendo-grid-columnmenu-item>
                             <div role="button" class="k-columnmenu-item">
-                                <span class="k-icon k-i-sort-desc-sm"></span> Sort Descending
+                                <span class="k-icon k-i-sort-desc-small"></span> Sort Descending
                             </div>
                         </kendo-grid-columnmenu-item>
                     </kendo-grid-columnmenu-sort>
