--- a/packages/html/src/grid/tests/grid-header-new-rendering.html
+++ b/packages/html/src/grid/tests/grid-header-new-rendering.html
@@ -28,7 +28,7 @@
                                                 <span  class="k-column-title">
                                                     ProductName
                                                 </span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">3</span>
                                             </span>
                                             <span  class="k-sort-status"  style="position: absolute; left: -10000px;">Sorted Ascending</span>
@@ -40,7 +40,7 @@
                                                 <span  class="k-column-title">
                                                 Discontinued
                                                 </span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">1</span>
                                             </span>
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
@@ -52,7 +52,7 @@
                                                 <span class="k-column-title">
                                                 UnitsInStock
                                                 </span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">2</span>
                                             </span>
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
@@ -83,7 +83,7 @@
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">ProductName</span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">2</span>
                                             </span>
                                             <span class="k-sort-status" role="status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
@@ -96,7 +96,7 @@
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">Discontinued</span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">2</span>
                                             </span>
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
@@ -109,7 +109,7 @@
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">UnitsInStockUnitsInStockUnitsInStockvvvv</span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span  class="k-sort-order">3</span>
                                             </span>
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
@@ -146,7 +146,7 @@
                                                 <span class="k-column-title">
                                                 ProductName
                                                 </span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">1</span>
                                             </span>
                                             <span class="k-sort-status"  style="position: absolute; left: -10000px;">Sorted Ascending</span>
@@ -162,7 +162,7 @@
                                             <span class="k-link">
                                                 <span class="k-column-title">Discontinued Discontinued Discontinued
                                                 </span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
 
                                                 <span class="k-sort-order">2</span>
                                             </span>
@@ -179,7 +179,7 @@
                                             <span class="k-link">
                                                 <span class="k-column-title">UnitsInStock
                                                 </span>
-                                                <span class="k-icon k-i-sort-asc-sm"></span>
+                                                <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">3</span>
                                             </span>
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
