feat(html): streamline interactive class names

--- a/packages/html/src/grid/tests/grid-angular-sticky-rows-and-cols.html
+++ b/packages/html/src/grid/tests/grid-angular-sticky-rows-and-cols.html
@@ -61,25 +61,25 @@
                                         <tr class="k-grid-row-sticky">
                                             <td colspan="1">sticky row</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
-                                            <td class="k-grid-content-sticky k-state-selected">sticky row and col: selected</td>
+                                            <td class="k-grid-content-sticky k-selected">sticky row and col: selected</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
                                         <tr class="k-grid-row-sticky k-alt">
                                            <td colspan="1">sticky row: alt</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
-                                            <td class="k-grid-content-sticky k-state-selected">sticky row and col: alt selected cell</td>
+                                            <td class="k-grid-content-sticky k-selected">sticky row and col: alt selected cell</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-state-hover">
+                                        <tr class="k-grid-row-sticky k-hover">
                                             <td colspan="1">sticky row: hover</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
-                                            <td class="k-grid-content-sticky k-state-selected">sticky row and col: hover selected</td>
+                                            <td class="k-grid-content-sticky k-selected">sticky row and col: hover selected</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-alt k-state-hover">
+                                        <tr class="k-grid-row-sticky k-alt k-hover">
                                             <td colspan="1">sticky row: alt hover</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
-                                            <td class="k-grid-content-sticky k-state-selected">sticky row and col: alt hover selected</td>
+                                            <td class="k-grid-content-sticky k-selected">sticky row and col: alt hover selected</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
                                         <tr>
@@ -94,25 +94,25 @@
                                             <td class="k-grid-content-sticky">sticky col</td>
                                             <td colspan="1">.</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-state-selected">
+                                        <tr class="k-grid-row-sticky k-selected">
                                             <td colspan="1">sticky row: selected</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-alt k-state-selected">
+                                        <tr class="k-grid-row-sticky k-alt k-selected">
                                            <td colspan="1">sticky row: alt selected</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky" >sticky row and col</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-state-selected k-state-hover">
+                                        <tr class="k-grid-row-sticky k-selected k-hover">
                                             <td colspan="1">sticky row: hover selected</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-alt k-grid-row-sticky k-alt k-state-selected k-state-hover">
+                                        <tr class="k-alt k-grid-row-sticky k-alt k-selected k-hover">
                                             <td colspan="1">sticky row: alt hover selected</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
